@@ -9,6 +9,7 @@
 * Fix - Issue with rendering Sepa on checkout page when card is disabled in non-UPE mode.
 * Tweak - Removed the "Early Access" pill and "Disable" option from the Stripe payment methods dropdown menu.
 * Tweak - Remove unused UPE title field.
+* Add - Enable the updated checkout experience (UPE) by default for new accounts.
 
 = 8.0.1 - 2024-03-13 =
 * Fix - Resolved failing card payments when `statement_descriptor` parameter is used.
